--- a/index.html
+++ b/index.html
@@ -25,23 +25,25 @@
 </head>
 <body>
     <div id="main">
-        <div id="arrows">
+        <!-- TODO: made 6 arrows, 2 for each body part, padding between arrow and sammy, modular (some outfits may not have certain body parts, remove drippy legs) -->
             <div class="arrow-left">
-                <a href="#">
-                    <img class="arrow-img" src="assets/arrow-left.png" alt="left arrow">
+                <a id="arrow-prev">
+                    <img src="assets/arrow-left.png" alt="left arrow">
                 </a>
             </div>
 
-            <div class="sammy">
-                <img src="assets/sammy.png" alt="sammy">
+            <div id="sammy">
+                <div><img id="sammy-head" class="body-part" src="assets/sammies/default/head.png" alt="head"></div>
+                <div><img id="sammy-body" class="body-part" src="assets/sammies/default/body.png" alt="body"></div>
+                <div><img id="sammy-legs" class="body-part" src="assets/sammies/default/legs.png" alt="legs"></div>
             </div>
 
             <div class="arrow-right">
-                <a href="#">
-                    <img class="arrow-img" src="assets/arrow-right.png" alt="right arrow">
+                <a id="arrow-forw">
+                    <img src="assets/arrow-right.png" alt="right arrow">
                 </a>
             </div>
-        </div>
     </div>
+    <script src="index.js" defer></script>
 </body>
 </html>
