--- a/index.html
+++ b/index.html
@@ -22,11 +22,18 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
+    <script src="index.js" defer></script>
 </head>
 <body>
     <div id="main">
-        <!-- TODO: made 6 arrows, 2 for each body part, padding between arrow and sammy, modular (some outfits may not have certain body parts, remove drippy legs) -->
+        <!-- TODO: make 6 arrows, padding between arrow and sammy, modular (some outfits may not have certain body parts, remove drippy legs) -->
             <div class="arrow-left">
+                <a id="arrow-prev">
+                    <img src="assets/arrow-left.png" alt="left arrow">
+                </a>
+                <a id="arrow-prev">
+                    <img src="assets/arrow-left.png" alt="left arrow">
+                </a>
                 <a id="arrow-prev">
                     <img src="assets/arrow-left.png" alt="left arrow">
                 </a>
@@ -42,8 +49,13 @@
                 <a id="arrow-forw">
                     <img src="assets/arrow-right.png" alt="right arrow">
                 </a>
+                <a id="arrow-forw">
+                    <img src="assets/arrow-right.png" alt="right arrow">
+                </a>
+                <a id="arrow-forw">
+                    <img src="assets/arrow-right.png" alt="right arrow">
+                </a>
             </div>
     </div>
-    <script src="index.js" defer></script>
 </body>
 </html>
