--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
     <div id="main">
         <!-- TODO: make 6 arrows, padding between arrow and sammy, modular (some outfits may not have certain body parts, remove drippy legs) -->
             <div class="arrow-left">
-                <a id="arrow-prev">
+                <a id="arrow-prev-head">
                     <img src="assets/arrow-left.png" alt="left arrow">
                 </a>
-                <a id="arrow-prev">
+                <a id="arrow-prev-body">
                     <img src="assets/arrow-left.png" alt="left arrow">
                 </a>
-                <a id="arrow-prev">
+                <a id="arrow-prev-legs">
                     <img src="assets/arrow-left.png" alt="left arrow">
                 </a>
             </div>
@@ -46,13 +46,13 @@
             </div>
 
             <div class="arrow-right">
-                <a id="arrow-forw">
+                <a id="arrow-forw-head">
                     <img src="assets/arrow-right.png" alt="right arrow">
                 </a>
-                <a id="arrow-forw">
+                <a id="arrow-forw-body">
                     <img src="assets/arrow-right.png" alt="right arrow">
                 </a>
-                <a id="arrow-forw">
+                <a id="arrow-forw-legs">
                     <img src="assets/arrow-right.png" alt="right arrow">
                 </a>
             </div>
