remove highlight & fix arrows

--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
 </head>
 <body>
     <div id="main">
-        <!-- TODO: make 6 arrows, padding between arrow and sammy, modular (some outfits may not have certain body parts, remove drippy legs) -->
+        <!-- TODO: padding between arrow and sammy, modular (some outfits may not have certain body parts, remove drippy legs) -->
             <div class="arrow-left">
-                <a id="arrow-prev-head">
+                <a id="arrow-prev-head" class="arrow-prev">
                     <img src="assets/arrow-left.png" alt="left arrow">
                 </a>
-                <a id="arrow-prev-body">
+                <a id="arrow-prev-body" class="arrow-prev">
                     <img src="assets/arrow-left.png" alt="left arrow">
                 </a>
-                <a id="arrow-prev-legs">
+                <a id="arrow-prev-legs" class="arrow-prev">
                     <img src="assets/arrow-left.png" alt="left arrow">
                 </a>
             </div>
@@ -46,13 +46,13 @@
             </div>
 
             <div class="arrow-right">
-                <a id="arrow-forw-head">
+                <a id="arrow-forw-head" class="arrow-forw">
                     <img src="assets/arrow-right.png" alt="right arrow">
                 </a>
-                <a id="arrow-forw-body">
+                <a id="arrow-forw-body" class="arrow-forw">
                     <img src="assets/arrow-right.png" alt="right arrow">
                 </a>
-                <a id="arrow-forw-legs">
+                <a id="arrow-forw-legs" class="arrow-forw">
                     <img src="assets/arrow-right.png" alt="right arrow">
                 </a>
             </div>
