--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 </head>
 <body>
     <div id="main">
-        <!-- TODO: padding between arrow and sammy, modular (some outfits may not have certain body parts, remove drippy legs) -->
-            <div class="arrow-left">
+        <!-- TODO: modular (some outfits may not have certain body parts, remove drippy legs) -->
+            <div id="arrow-left" class="hide-highlight">
                 <a id="arrow-prev-head" class="arrow-prev">
                     <img src="assets/arrow-left.png" alt="left arrow">
                 </a>
@@ -39,13 +39,13 @@
                 </a>
             </div>
 
-            <div id="sammy">
+            <div id="sammy" class="hide-highlight">
                 <div><img id="sammy-head" class="body-part" src="assets/sammies/default/head.png" alt="head"></div>
                 <div><img id="sammy-body" class="body-part" src="assets/sammies/default/body.png" alt="body"></div>
                 <div><img id="sammy-legs" class="body-part" src="assets/sammies/default/legs.png" alt="legs"></div>
             </div>
 
-            <div class="arrow-right">
+            <div id="arrow-right" class="hide-highlight">
                 <a id="arrow-forw-head" class="arrow-forw">
                     <img src="assets/arrow-right.png" alt="right arrow">
                 </a>
