--- a/index.html
+++ b/index.html
@@ -57,5 +57,7 @@
                 </a>
             </div>
     </div>
+    <label for="input-head">Choose a custom head</label>
+    <input type="file" id="input-head" name="head" accept="image/*">
 </body>
 </html>
