custom head & cowboy sammy & update mc sammy legs

--- a/index.html
+++ b/index.html
@@ -57,7 +57,15 @@
                 </a>
             </div>
     </div>
-    <label for="input-head">Choose a custom head</label>
-    <input type="file" id="input-head" name="head" accept="image/*">
+    <div id="bottom">
+        <div id="custom-head">
+            <label for="input-head">Choose a custom head</label>
+            <input type="file" id="input-head" name="head" accept="image/*">
+        </div>
+
+        <div id="randomizer">
+            <a><img id="randomize" src="assets/randomize.png" alt="randomize"></a>
+        </div>
+    </div>
 </body>
 </html>
