--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
 
     <link rel="apple-touch-startup-image" href="/assets/loading.png">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fredoka%20One">
     <script src="index.js" defer></script>
 </head>
 <body>
+    <h1 id="title">Dress-my</h1>
     <div id="main">
         <!-- TODO: modular (some outfits may not have certain body parts, remove drippy legs) -->
             <div id="arrow-left" class="hide-highlight">
