--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <link rel="apple-touch-startup-image" media="screen and (device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="assets/loading.png">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fredoka%20One">
+    <link rel="stylesheet" href="index.css">
     <script src="index.js" defer></script>
 </head>
 <body>
@@ -32,13 +32,13 @@
     <div id="main">
             <div id="arrow-left" class="hide-highlight">
                 <a id="arrow-prev-head" class="arrow-prev">
-                    <img src="assets/arrow-left.png" alt="left arrow">
+                    <img id="arrow-prev-head-inner" src="assets/arrow-left.png" alt="left arrow">
                 </a>
                 <a id="arrow-prev-body" class="arrow-prev">
-                    <img src="assets/arrow-left.png" alt="left arrow">
+                    <img id="arrow-prev-body-inner" src="assets/arrow-left.png" alt="left arrow">
                 </a>
                 <a id="arrow-prev-legs" class="arrow-prev">
-                    <img src="assets/arrow-left.png" alt="left arrow">
+                    <img id="arrow-prev-legs-inner" src="assets/arrow-left.png" alt="left arrow">
                 </a>
             </div>
 
@@ -50,13 +50,13 @@
 
             <div id="arrow-right" class="hide-highlight">
                 <a id="arrow-forw-head" class="arrow-forw">
-                    <img src="assets/arrow-right.png" alt="right arrow">
+                    <img id="arrow-forw-head-inner" src="assets/arrow-right.png" alt="right arrow">
                 </a>
                 <a id="arrow-forw-body" class="arrow-forw">
-                    <img src="assets/arrow-right.png" alt="right arrow">
+                    <img id="arrow-forw-body-inner" src="assets/arrow-right.png" alt="right arrow">
                 </a>
                 <a id="arrow-forw-legs" class="arrow-forw">
-                    <img src="assets/arrow-right.png" alt="right arrow">
+                    <img id="arrow-forw-legs-inner" src="assets/arrow-right.png" alt="right arrow">
                 </a>
             </div>
     </div>
