start color control

--- a/index.html
+++ b/index.html
@@ -28,7 +28,12 @@
     <script src="index.js" defer></script>
 </head>
 <body>
-    <h1 id="title">Dress-my</h1>
+    <div id="top">
+        <span id="title">Dress-my</span>
+        <a id="colour-toggle">
+            <img src="/assets/sun.png" alt="colour scheme toggler" id="colour-toggle-inner">
+        </a>
+    </div>
     <div id="main">
             <div id="arrow-left" class="hide-highlight">
                 <a id="arrow-prev-head" class="arrow-prev">
