colour scheme toggle

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 <body>
     <div id="top">
         <span id="title">Dress-my</span>
-        <a id="colour-toggle">
+
+        <a id="colour-toggle" class="hide-highlight">
             <img src="/assets/sun.png" alt="colour scheme toggler" id="colour-toggle-inner">
         </a>
     </div>
