--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <input type="file" id="input-head" name="head" accept="image/*">
         </div>
 
-        <div id="randomizer">
+        <div id="randomizer" class="hide-highlight">
             <a><img id="randomize" src="assets/randomize.png" alt="randomize"></a>
         </div>
     </div>
