--- a/index.html
+++ b/index.html
@@ -1,80 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>Dress-my</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sammy Apps</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+  <style>
+    body {
+      background-color: var(--bs-dark);
+      color : #fff;
+    }
 
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-touch-fullscreen" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-mobile-web-app-title" content="Dress-my">
-    
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" href="apple-touch-icon.png">
-    <link rel="apple-touch-icon" sizes="57x57" href="assets/apple-touch-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="assets/apple-touch-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="assets/apple-touch-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon-180x180.png">
-
-    <link rel="apple-touch-startup-image" href="/assets/loading.png">
-    <link rel="apple-touch-startup-image" media="screen and (device-width: 810px) and (device-height: 1080px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="assets/loading.png">
-    <link rel="apple-touch-startup-image" media="screen and (device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="assets/loading.png">
-
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fredoka%20One">
-    <link rel="stylesheet" href="index.css">
-    <script src="index.js" defer></script>
+    .ooga {
+      background-color: var(--bs-red);
+    }
+  </style>
 </head>
+
 <body>
-    <div id="top">
-        <span id="title">Dress-my</span>
+  <br/>
 
-        <a id="colour-toggle" class="hide-highlight">
-            <img src="/assets/sun.png" alt="colour scheme toggler" id="colour-toggle-inner">
-        </a>
-    </div>
-    <div id="main">
-            <div id="arrow-left" class="hide-highlight">
-                <a id="arrow-prev-head" class="arrow-prev">
-                    <img id="arrow-prev-head-inner" src="assets/arrow-left.png" alt="left arrow">
-                </a>
-                <a id="arrow-prev-body" class="arrow-prev">
-                    <img id="arrow-prev-body-inner" src="assets/arrow-left.png" alt="left arrow">
-                </a>
-                <a id="arrow-prev-legs" class="arrow-prev">
-                    <img id="arrow-prev-legs-inner" src="assets/arrow-left.png" alt="left arrow">
-                </a>
-            </div>
+  <h1 class="text-center">Sammy Apps</h1>
 
-            <div id="sammy" class="hide-highlight">
-                <div><img id="sammy-head" class="body-part" src="assets/sammies/default/head.png" alt="head"></div>
-                <div><img id="sammy-body" class="body-part" src="assets/sammies/default/body.png" alt="body"></div>
-                <div><img id="sammy-legs" class="body-part" src="assets/sammies/default/legs.png" alt="legs"></div>
-            </div>
+  <br/><br/>
 
-            <div id="arrow-right" class="hide-highlight">
-                <a id="arrow-forw-head" class="arrow-forw">
-                    <img id="arrow-forw-head-inner" src="assets/arrow-right.png" alt="right arrow">
-                </a>
-                <a id="arrow-forw-body" class="arrow-forw">
-                    <img id="arrow-forw-body-inner" src="assets/arrow-right.png" alt="right arrow">
-                </a>
-                <a id="arrow-forw-legs" class="arrow-forw">
-                    <img id="arrow-forw-legs-inner" src="assets/arrow-right.png" alt="right arrow">
-                </a>
-            </div>
-    </div>
-    <div id="bottom">
-        <div id="custom-head">
-            <label for="input-head">Choose a custom head</label>
-            <input type="file" id="input-head" name="head" accept="image/*">
-        </div>
-
-        <div id="randomizer" class="hide-highlight">
-            <a><img id="randomize" src="assets/randomize.png" alt="randomize"></a>
-        </div>
-    </div>
+  <div class="d-grid gap-2 col-4 mx-auto">
+    <a href="./dressmy" class="ooga btn btn-lg text-decoration-none text-white">Dress-my</a>
+  </div>
 </body>
 </html>
