--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
   <div class="d-grid gap-2 col-4 mx-auto">
     <a href="./dressmy" class="ooga btn btn-lg text-decoration-none text-white">Dress-my</a>
+    <a href="./dino" class="ooga btn btn-lg text-decoration-none text-white">Dino</a>
   </div>
 </body>
 </html>
