--- a/dino.html
+++ b/dino.html
@@ -7,6 +7,12 @@
     <title>Dino Game</title>
 </head>
 <body>
-    
+    <div class="world" data-world>
+        <div class="score" data-score>0</div>
+        <div class="start-screen" data-start-screen>Press Any Key To Start</div>
+        <img src="assets/dino/ground.png" class="ground" data-ground>
+        <img src="assets/dino/ground.png" class="ground" data-ground>
+        <img src="assets/dino/head.png" class="dino" data-dino>
+      </div>
 </body>
 </html>
