--- a/dressmy.html
+++ b/dressmy.html
@@ -11,40 +11,40 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Dress-my">
     
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" href="apple-touch-icon.png">
-    <link rel="apple-touch-icon" sizes="57x57" href="assets/apple-touch-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="assets/apple-touch-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="assets/apple-touch-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon-180x180.png">
+    <link rel="shortcut icon" href="assets/dressmy/favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" href="assets/dressmy/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="57x57" href="assets/dressmy/apple-touch-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="assets/dressmy/apple-touch-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="assets/dressmy/apple-touch-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/dressmy/apple-touch-icon-180x180.png">
 
-    <link rel="apple-touch-startup-image" href="/assets/loading.png">
-    <link rel="apple-touch-startup-image" media="screen and (device-width: 810px) and (device-height: 1080px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="assets/loading.png">
-    <link rel="apple-touch-startup-image" media="screen and (device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="assets/loading.png">
+    <link rel="apple-touch-startup-image" href="/assets/dressmy/loading.png">
+    <link rel="apple-touch-startup-image" media="screen and (device-width: 810px) and (device-height: 1080px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="assets/dressmy/loading.png">
+    <link rel="apple-touch-startup-image" media="screen and (device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="assets/dressmy/loading.png">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fredoka%20One">
-    <link rel="stylesheet" href="dressmy.css">
-    <script src="dressmy.js" defer></script>
+    <link rel="stylesheet" href="css/dressmy.css">
+    <script src="js/dressmy.js" defer></script>
 </head>
 <body>
     <div id="top">
         <span id="title">Dress-my</span>
 
         <a id="colour-toggle" class="hide-highlight">
-            <img src="/assets/sun.png" alt="colour scheme toggler" id="colour-toggle-inner">
+            <img src="/assets/dressmy/sun.png" alt="colour scheme toggler" id="colour-toggle-inner">
         </a>
     </div>
     <div id="main">
             <div id="arrow-left" class="hide-highlight">
                 <a id="arrow-prev-head" class="arrow-prev">
-                    <img id="arrow-prev-head-inner" src="assets/arrow-left.png" alt="left arrow">
+                    <img id="arrow-prev-head-inner" src="assets/dressmy/arrow-left.png" alt="left arrow">
                 </a>
                 <a id="arrow-prev-body" class="arrow-prev">
-                    <img id="arrow-prev-body-inner" src="assets/arrow-left.png" alt="left arrow">
+                    <img id="arrow-prev-body-inner" src="assets/dressmy/arrow-left.png" alt="left arrow">
                 </a>
                 <a id="arrow-prev-legs" class="arrow-prev">
-                    <img id="arrow-prev-legs-inner" src="assets/arrow-left.png" alt="left arrow">
+                    <img id="arrow-prev-legs-inner" src="assets/dressmy/arrow-left.png" alt="left arrow">
                 </a>
             </div>
 
@@ -56,13 +56,13 @@
 
             <div id="arrow-right" class="hide-highlight">
                 <a id="arrow-forw-head" class="arrow-forw">
-                    <img id="arrow-forw-head-inner" src="assets/arrow-right.png" alt="right arrow">
+                    <img id="arrow-forw-head-inner" src="assets/dressmy/arrow-right.png" alt="right arrow">
                 </a>
                 <a id="arrow-forw-body" class="arrow-forw">
-                    <img id="arrow-forw-body-inner" src="assets/arrow-right.png" alt="right arrow">
+                    <img id="arrow-forw-body-inner" src="assets/dressmy/arrow-right.png" alt="right arrow">
                 </a>
                 <a id="arrow-forw-legs" class="arrow-forw">
-                    <img id="arrow-forw-legs-inner" src="assets/arrow-right.png" alt="right arrow">
+                    <img id="arrow-forw-legs-inner" src="assets/dressmy/arrow-right.png" alt="right arrow">
                 </a>
             </div>
     </div>
@@ -73,7 +73,7 @@
         </div>
 
         <div id="randomizer" class="hide-highlight">
-            <a><img id="randomize" src="assets/randomize.png" alt="randomize"></a>
+            <a><img id="randomize" src="assets/dressmy/randomize.png" alt="randomize"></a>
         </div>
     </div>
 </body>
