--- a/dino.html
+++ b/dino.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dino Game</title>
+    <link rel="stylesheet" href="css/dino.css">
+    <script src="js/dino.js" type="module"></script>
 </head>
 <body>
     <div class="world" data-world>
@@ -12,7 +14,7 @@
         <div class="start-screen" data-start-screen>Press Any Key To Start</div>
         <img src="assets/dino/ground.png" class="ground" data-ground>
         <img src="assets/dino/ground.png" class="ground" data-ground>
-        <img src="assets/dino/head.png" class="dino" data-dino>
+        <img src="assets/dinos/sammy1/dino-stationary.png" class="dino" data-dino>
       </div>
 </body>
 </html>
