--- a/dino.html
+++ b/dino.html
@@ -11,7 +11,7 @@
 <body>
     <div class="world" data-world>
         <div class="score" data-score>0</div>
-        <div class="start-screen" data-start-screen>Press Any Key To Start</div>
+        <div class="start-screen" data-start-screen>Press any key to start</div>
         <img src="assets/dino/ground.png" class="ground" data-ground>
         <img src="assets/dino/ground.png" class="ground" data-ground>
         <img src="assets/dinos/sammy1/dino-stationary.png" class="dino" data-dino>
