--- a/dino.html
+++ b/dino.html
@@ -10,11 +10,11 @@
 </head>
 <body>
     <div class="world" data-world>
-        <div class="score" data-score>0</div>
-        <div class="start-screen" data-start-screen>Press any key to start</div>
+        <div class="score" data-score>SCORE 0 | HI 0</div>
+        <div id="start-screen" data-start-screen>Press any key to start</div>
         <img src="assets/dino/ground.png" class="ground" data-ground>
         <img src="assets/dino/ground.png" class="ground" data-ground>
-        <img src="assets/dinos/sammy1/dino-stationary.png" class="dino" data-dino>
-      </div>
+        <img src="assets/dinos/sammy1/dino-stationary.png" id="dino" data-dino>
+    </div>
 </body>
 </html>
