try saving score to local storage

--- a/dino.html
+++ b/dino.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dino Game</title>
+    <title>Dinammy</title>
+
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-touch-fullscreen" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="Dinammy">
+
     <link rel="stylesheet" href="css/dino.css">
     <script src="js/dino.js" type="module"></script>
 </head>
 <body>
     <div class="world" data-world>
-        <div class="score" data-score>SCORE 0 | HI 0</div>
+        <div class="score" data-score>HI 0 | SCORE 0</div>
         <div id="start-screen" data-start-screen>Press any key to start</div>
         <img src="assets/dino/ground.png" class="ground" data-ground>
         <img src="assets/dino/ground.png" class="ground" data-ground>
