only allow space to start

--- a/dino.html
+++ b/dino.html
@@ -17,7 +17,7 @@
 <body>
     <div class="world" data-world>
         <div class="score" data-score>HI 0 | SCORE 0</div>
-        <div id="start-screen" data-start-screen>Press any key to start</div>
+        <div id="start-screen" data-start-screen>Press space to start</div>
         <img src="assets/dino/ground.png" class="ground" data-ground>
         <img src="assets/dino/ground.png" class="ground" data-ground>
         <img src="assets/dinos/sammy1/dino-stationary.png" id="dino" data-dino>
