--- a/dressmy.html
+++ b/dressmy.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fredoka%20One">
     <link rel="stylesheet" href="css/dressmy.css">
-    <script src="js/dressmy.js" defer></script>
+    <script src="js/dressmy.js" type="module" defer></script>
 </head>
 <body>
     <div id="top">
