--- a/dino.html
+++ b/dino.html
@@ -11,13 +11,14 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Dinammy">
 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kdam%20Thmor%20Pro">
     <link rel="stylesheet" href="css/dino.css">
     <script src="js/dino.js" type="module"></script>
 </head>
 <body>
-    <div class="world" data-world>
-        <div class="score" data-score>HI 0 | SCORE 0</div>
-        <div id="start-screen" data-start-screen>Press space to start</div>
+    <div id="world" data-world>
+        <div id="score" data-score>HI 0 | SCORE 0</div>
+        <div id="start-screen" data-start-screen>Press space or click to start</div>
         <img src="assets/dino/ground.png" class="ground" data-ground>
         <img src="assets/dino/ground.png" class="ground" data-ground>
         <img src="assets/dinos/sammy1/dino-stationary.png" id="dino" data-dino>
