--- a/dino.html
+++ b/dino.html
@@ -13,9 +13,13 @@
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kdam%20Thmor%20Pro">
     <link rel="stylesheet" href="css/dino.css">
+    <link rel="stylesheet" href="css/global.css">
     <script src="js/dino.js" type="module"></script>
 </head>
 <body>
+    <div id="header">
+        <a href="/"><img id="homeImg" src="assets/home.png" alt="home button"></a>
+    </div>
     <div id="world" data-world>
         <div id="score" data-score>HI 0 | SCORE 0</div>
         <div id="start-screen" data-start-screen>Press space or click to start</div>
