--- a/dressmy.html
+++ b/dressmy.html
@@ -24,10 +24,14 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fredoka%20One">
+    <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/dressmy.css">
     <script src="js/dressmy.js" type="module" defer></script>
 </head>
 <body>
+    <div id="header">
+        <a href="/"><img id="homeImg" src="assets/home.png" alt="home button"></a>
+    </div>
     <div id="top">
         <span id="title">Dress-my</span>
 
