--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="apple-mobile-web-app-title" content="Sammy Apps">
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fredoka%20One">
   <style>
     body {
       background-color: var(--bs-dark);
@@ -21,6 +21,12 @@
 
     .ooga {
       background-color: var(--bs-red);
+      font-family: 'Fredoka One', sans-serif;
+    }
+
+    #banner {
+      width: 100%;
+      height: auto;
     }
   </style>
 </head>
@@ -28,7 +34,7 @@
 <body>
   <br/>
 
-  <h1 class="text-center">Sammy Apps</h1>
+  <img id="banner" src="assets/banner.png" alt="Sammy Apps">
 
   <br/><br/>
 
