--- a/dressmy.html
+++ b/dressmy.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fredoka%20One">
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/dressmy.css">
-    <script src="js/dressmy.js" type="module" defer></script>
+    <script src="js/dressmy.js" type="module"></script>
 </head>
 <body>
     <div id="header">
