update cactus, add cart

--- a/dino.html
+++ b/dino.html
@@ -19,6 +19,7 @@
 <body>
     <div id="header">
         <a href="/"><img id="homeImg" src="assets/home.png" alt="home button"></a>
+        <a><img id="cartImg" src="assets/dino/cart.png" alt="cart"></a>
     </div>
     <div id="world" data-world>
         <div id="score" data-score>HI 0 | SCORE 0</div>
