--- a/dino.html
+++ b/dino.html
@@ -18,8 +18,8 @@
 </head>
 <body>
     <div id="header">
-        <a href="/"><img id="homeImg" src="assets/home.png" alt="home button"></a>
-        <a><img id="cartImg" src="assets/dino/cart.png" alt="cart"></a>
+        <a href="/"><img src="assets/home.png" alt="home button"></a>
+        <a id="shopButton"><img src="assets/dino/cart.png" alt="cart"></a>
     </div>
     <div id="world" data-world>
         <div id="score" data-score>HI 0 | SCORE 0</div>
@@ -27,6 +27,9 @@
         <img src="assets/dino/ground.png" class="ground" data-ground>
         <img src="assets/dino/ground.png" class="ground" data-ground>
         <img src="assets/dinos/sammy1/dino-stationary.png" id="dino" data-dino>
+    </div>
+    <div id="shop" class="hide" data-shop>
+        <p>buy stuff</p>
     </div>
 </body>
 </html>
