basic shop layout

--- a/dino.html
+++ b/dino.html
@@ -11,6 +11,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Dinammy">
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kdam%20Thmor%20Pro">
     <link rel="stylesheet" href="css/dino.css">
     <link rel="stylesheet" href="css/global.css">
@@ -28,8 +29,47 @@
         <img src="assets/dino/ground.png" class="ground" data-ground>
         <img src="assets/dinos/sammy1/dino-stationary.png" id="dino" data-dino>
     </div>
-    <div id="shop" class="hide" data-shop>
-        <p>buy stuff</p>
+    <div id="shop" class="hide d-grid" data-shop>
+        <div class="shopCharacter">
+            <div class="shop-req">REQ: 0 HIGH SCORE</div>
+            <img class="shop-img" src="assets/dinos/sammy1/dino-stationary.png" alt="sammy">
+            <button type="button" class="btn btn-primary btn-equip">Equip</button>
+        </div>
+        <div class="shopCharacter">
+            <div class="shop-req">REQ: 0 HIGH SCORE</div>
+            <img class="shop-img" src="assets/dinos/sammy1/dino-stationary.png" alt="sammy">
+            <button type="button" class="btn btn-primary btn-equip">Equip</button>
+        </div>
+        <div class="shopCharacter">
+            <div class="shop-req">REQ: 0 HIGH SCORE</div>
+            <img class="shop-img" src="assets/dinos/sammy1/dino-stationary.png" alt="sammy">
+            <button type="button" class="btn btn-primary btn-equip">Equip</button>
+        </div>
+        <div class="shopCharacter">
+            <div class="shop-req">REQ: 0 HIGH SCORE</div>
+            <img class="shop-img" src="assets/dinos/sammy1/dino-stationary.png" alt="sammy">
+            <button type="button" class="btn btn-primary btn-equip">Equip</button>
+        </div>
+        <div class="shopCharacter">
+            <div class="shop-req">REQ: 0 HIGH SCORE</div>
+            <img class="shop-img" src="assets/dinos/sammy1/dino-stationary.png" alt="sammy">
+            <button type="button" class="btn btn-primary btn-equip">Equip</button>
+        </div>
+        <div class="shopCharacter">
+            <div class="shop-req">REQ: 0 HIGH SCORE</div>
+            <img class="shop-img" src="assets/dinos/sammy1/dino-stationary.png" alt="sammy">
+            <button type="button" class="btn btn-primary btn-equip">Equip</button>
+        </div>
+        <div class="shopCharacter">
+            <div class="shop-req">REQ: 0 HIGH SCORE</div>
+            <img class="shop-img" src="assets/dinos/sammy1/dino-stationary.png" alt="sammy">
+            <button type="button" class="btn btn-primary btn-equip">Equip</button>
+        </div>
+        <div class="shopCharacter">
+            <div class="shop-req">REQ: 0 HIGH SCORE</div>
+            <img class="shop-img" src="assets/dinos/sammy1/dino-stationary.png" alt="sammy">
+            <button type="button" class="btn btn-primary btn-equip">Equip</button>
+        </div>
     </div>
 </body>
 </html>
