rename sammy1 to default, create shop procedurally

--- a/dino.html
+++ b/dino.html
@@ -27,48 +27,13 @@
         <div id="start-screen" data-start-screen>Press space or click to start</div>
         <img src="assets/dino/ground.png" class="ground" data-ground>
         <img src="assets/dino/ground.png" class="ground" data-ground>
-        <img src="assets/dinos/sammy1/dino-stationary.png" id="dino" data-dino>
+        <img src="assets/dinos/default/dino-stationary.png" id="dino" data-dino>
     </div>
     <div id="shop" class="hide d-grid" data-shop>
-        <div class="shopCharacter">
-            <div class="shop-req">REQ: 0 HIGH SCORE</div>
-            <img class="shop-img" src="assets/dinos/sammy1/dino-stationary.png" alt="sammy">
-            <button type="button" class="btn btn-primary btn-equip">Equip</button>
-        </div>
-        <div class="shopCharacter">
-            <div class="shop-req">REQ: 0 HIGH SCORE</div>
-            <img class="shop-img" src="assets/dinos/sammy1/dino-stationary.png" alt="sammy">
-            <button type="button" class="btn btn-primary btn-equip">Equip</button>
-        </div>
-        <div class="shopCharacter">
-            <div class="shop-req">REQ: 0 HIGH SCORE</div>
-            <img class="shop-img" src="assets/dinos/sammy1/dino-stationary.png" alt="sammy">
-            <button type="button" class="btn btn-primary btn-equip">Equip</button>
-        </div>
-        <div class="shopCharacter">
-            <div class="shop-req">REQ: 0 HIGH SCORE</div>
-            <img class="shop-img" src="assets/dinos/sammy1/dino-stationary.png" alt="sammy">
-            <button type="button" class="btn btn-primary btn-equip">Equip</button>
-        </div>
-        <div class="shopCharacter">
-            <div class="shop-req">REQ: 0 HIGH SCORE</div>
-            <img class="shop-img" src="assets/dinos/sammy1/dino-stationary.png" alt="sammy">
-            <button type="button" class="btn btn-primary btn-equip">Equip</button>
-        </div>
-        <div class="shopCharacter">
-            <div class="shop-req">REQ: 0 HIGH SCORE</div>
-            <img class="shop-img" src="assets/dinos/sammy1/dino-stationary.png" alt="sammy">
-            <button type="button" class="btn btn-primary btn-equip">Equip</button>
-        </div>
-        <div class="shopCharacter">
-            <div class="shop-req">REQ: 0 HIGH SCORE</div>
-            <img class="shop-img" src="assets/dinos/sammy1/dino-stationary.png" alt="sammy">
-            <button type="button" class="btn btn-primary btn-equip">Equip</button>
-        </div>
-        <div class="shopCharacter">
-            <div class="shop-req">REQ: 0 HIGH SCORE</div>
-            <img class="shop-img" src="assets/dinos/sammy1/dino-stationary.png" alt="sammy">
-            <button type="button" class="btn btn-primary btn-equip">Equip</button>
+        <div class="shopCharacter" id="char-template">
+            <div class="shop-req">Loading...</div>
+            <img class="shop-img" src="assets/dinos/default/dino-stationary.png" alt="sammy">
+            <button type="button" class="btn btn-equip">Loading...</button>
         </div>
     </div>
 </body>
