--- a/dino.html
+++ b/dino.html
@@ -11,6 +11,17 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Dinammy">
 
+    <link rel="shortcut icon" href="assets/dino/favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" href="assets/dino/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="57x57" href="assets/dino/apple-touch-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="assets/dino/apple-touch-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="assets/dino/apple-touch-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/dino/apple-touch-icon-180x180.png">
+
+    <link rel="apple-touch-startup-image" href="/assets/loading.png">
+    <link rel="apple-touch-startup-image" media="screen and (device-width: 810px) and (device-height: 1080px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="assets/loading.png">
+    <link rel="apple-touch-startup-image" media="screen and (device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="assets/loading.png">
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kdam%20Thmor%20Pro">
     <link rel="stylesheet" href="css/dino.css">
