--- a/dressmy.html
+++ b/dressmy.html
@@ -18,9 +18,9 @@
     <link rel="apple-touch-icon" sizes="152x152" href="assets/dressmy/apple-touch-icon-152x152.png">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/dressmy/apple-touch-icon-180x180.png">
 
-    <link rel="apple-touch-startup-image" href="/assets/dressmy/loading.png">
-    <link rel="apple-touch-startup-image" media="screen and (device-width: 810px) and (device-height: 1080px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="assets/dressmy/loading.png">
-    <link rel="apple-touch-startup-image" media="screen and (device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="assets/dressmy/loading.png">
+    <link rel="apple-touch-startup-image" href="/assets/loading.png">
+    <link rel="apple-touch-startup-image" media="screen and (device-width: 810px) and (device-height: 1080px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="assets/loading.png">
+    <link rel="apple-touch-startup-image" media="screen and (device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="assets/loading.png">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fredoka%20One">
