--- a/dressmy.html
+++ b/dressmy.html
@@ -72,7 +72,7 @@
     </div>
     <div id="bottom">
         <div id="custom-head">
-            <label for="input-head">Choose a custom head</label>
+            <label for="input-head">Import a custom head</label>
             <input type="file" id="input-head" name="head" accept="image/*">
         </div>
 
