--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,29 +12,37 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="apple-mobile-web-app-title" content="Sammy Apps">
 
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fredoka%20One">
   <style>
     body {
       background-color: var(--bs-dark);
-      color : #fff;
+      color: #fff;
     }
 
     .ooga {
       background-color: var(--bs-red);
       font-family: 'Fredoka One', sans-serif;
+      width: 55%;
+      margin: auto;
     }
 
     #banner {
       width: 100%;
       height: auto;
     }
+
+    .sammyverse {
+      width: 60vw;
+      height: 50vh;
+      display: flex;
+      margin: auto;
+    }
   </style>
 </head>
 
 <body>
-  <br/>
-
   <img id="banner" src="assets/banner.png" alt="Sammy Apps">
 
   <br/><br/>
@@ -42,5 +51,13 @@
     <a href="./dressmy" class="ooga btn btn-lg text-decoration-none text-white">Dress-my</a>
     <a href="./dino" class="ooga btn btn-lg text-decoration-none text-white">Dinammy</a>
   </div>
+
+  <br/><br/>
+
+  <iframe class="sammyverse" src="https://www.youtube-nocookie.com/embed/eqP4oPnZlfA" title="The Sammy-Verse"
+    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowfullscreen></iframe>
+
 </body>
+
 </html>
