--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
   <div class="d-grid gap-2 col-4 mx-auto">
     <a href="./dressmy" class="ooga btn btn-lg text-decoration-none text-white">Dress-my</a>
     <a href="./dino" class="ooga btn btn-lg text-decoration-none text-white">Dinammy</a>
+    <a href="./whack-a-musa" class="ooga btn btn-lg text-decoration-none text-white">Whack-a-Musa</a>
   </div>
 
   <br/><br/>
