--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     <a href="./dressmy" class="ooga btn btn-lg text-decoration-none text-white">Dress-my</a>
     <a href="./dino" class="ooga btn btn-lg text-decoration-none text-white">Dinammy</a>
     <a href="./whack-a-musa" class="ooga btn btn-lg text-decoration-none text-white">Whack-a-Musa</a>
+    <a href="./ad" class="ooga btn btn-lg text-decoration-none text-white">Whack-a-Musa Ad</a>
   </div>
 
   <br/><br/>
